# widictor

./: .gitignore  Cargo.toml  log2.lua  pom.xml  templates.conf  test
config/widictor/: templates.conf
config/widictor/derived/: language.json
core/: Cargo.toml
core/src/: lib.rs
database/: Cargo.toml
database/src/: language.rs  lib.rs  user.rs
jnino/: Cargo.toml  Readme.md
jnino/derive_jface/: Cargo.toml
jnino/derive_jface/src/: lib.rs
jnino/jnino/: Cargo.toml
jnino/jnino/src/: lib.rs
mediawiki/: Cargo.toml
mediawiki/src/: lib.rs
pkg/: MWServer.lua  mw.frame.lua  mw.language.lua  mw.lua  mw_main.lua  package.lua
remote/: Cargo.toml
remote/src/: lib.rs  main.rs
scribunto/: Cargo.toml
scribunto/src/: lib.rs  lua_array.rs  lua_bool.rs  lua_chunk.rs  lua_float.rs  lua_integer.rs  lua_null.rs  lua_string.rs  lua_table.rs  php_error.rs
src/: lib.rs  main.rs  remote.rs  scribunto.rs  wiki.rs
src/main/rust/: lib.rs  remote.rs  scribunto.rs  wiki.rs
src/main/rust/scribunto/: lua_chunk.rs  lua_integer.rs  lua_string.rs  lua_table.rs  php_error.rs
src/main/rust/wiki/: combinator.rs  element.rs  section.rs  template.rs  text.rs  wiki.rs  wiki_error.rs
src/main/rust/wiki/text/: template.rs
src/main/scala/org/apqm/jni/: Raw.scala  Scribunto.scala
src/main/scala/org/apqm/native/: Raw.scala  Telua.scala
src/main/scala/org/apqm/widictor/: App.scala  Cbored.scala  Hyper.scala  Scribunto.scala  Trampoline.scala
src/scribunto/: lua_bool.rs  lua_chunk.rs  lua_float.rs  lua_integer.rs  lua_null.rs  lua_string.rs  lua_table.rs  php_error.rs
src/test/scala/org/apqm/widictor/: Scribunto.scala  ScribuntoAnswerSpec.scala
src/wiki/: error.rs  language.rs  section.rs  substr.rs  text.rs  wiki_error.rs  word.rs  word_section.rs
src/wiki/text/: template.rs
template/: Cargo.toml
template/src/: lib.rs
templates/derived/: Cargo.toml
templates/derived/src/: main.rs
templates/inflection_of/: Cargo.toml
templates/inflection_of/src/: main.rs
templates/lua/: Module:la-headword.lua  Module:la-utilities.lua  Module:languages.lua  Module:links.lua  Module:parameters.lua  Module:string.lua  Module:table.lua  Module:utilities.lua  Module:utils.lua  core.lua  la-verb.lua  libraryUtil.lua
templates/lua/Module:languages/: data2.lua
templates/lua/Module:utilities/: data.lua
templates/noun/: Cargo.toml
templates/noun/src/: main.rs
templates/verb/: Cargo.toml
templates/verb/src/: conj1.rs  conj2.rs  conj4.rs  main.rs
widictor/: Cargo.toml
widictor/src/: combinator.rs  element.rs  error.rs  language.rs  main.rs  piece.rs  piece_params.rs  section.rs  substr.rs  template.rs  text.rs  wiki.rs  wiki_error.rs  word.rs  word_section.rs
widictor/src/text/: piece.rs  template.rs
