[package]
name = "widictor"
version = "0.1.0"
authors = ["tiberiuscn <tican@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
nom = "^5.0"
#regex = "^1.3"
#diesel = { version = "^1.4", features = ["postgres"] }

#hex = "0.4"
reqwest = { version = "0.10", features = ["blocking"] }
