[package]
name = "widictor"
version = "0.1.0"
authors = ["tiberiuscn <tican@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
nom = "5.0"
percent-encoding = "2.1"
reqwest = { version = "0.10", features = ["blocking"] }
seq = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
