[package]
name = "remote"
version = "0.1.0"
authors = ["tiberiuscn <tican@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0"
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
percent-encoding = "^2.1"

reqwest = { version = "0.10", features = ["blocking"] }