[package]
name = "widictor"
version = "0.1.0"
authors = ["tiberiuscn <tican@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
nom = "^5.0"
lazy_static = "^1.4"
directories = "^3.0"

reqwest = { version = "0.10", features = ["blocking"] }

template = { path = "../template" }
mediawiki = { path = "../mediawiki" }
database = { path = "../database" }