[package]
name = "widictor"
version = "0.1.0"
authors = ["tiberiuscn <tican@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0"
lazy_static = "1.4"
nom = "5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

log = "0.4"
seq = "0.5"

#reqwest = { version = "0.10", features = ["blocking"] }

#template = { path = "../template" }
remote = { path = "../remote" }
#database = { path = "../database" }