[package]
name = "jnino"
version = "0.1.0"
edition = "2018"
authors = ["Tiberius <tican@protonmail.com>"]
description = "Java Native Interface to rust Native Objects"
readme = "README.md"
keywords = [
    "ffi",
    "jni",
    "java",
]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tiberiuscn/jnino-rs"

[dependencies]
derive_jface = { path = "../derive_jface" }
jni = "0.19"
log = "0.4"
