[package]
name = "inflection_of"
version = "0.1.0"
authors = ["tiberius <vi@ceramic3d.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"

template = { path = "../../template" }